--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
@@ -36,10 +37,9 @@
         </div>
     </div>
 
-    <audio id="backgroundMusic" loop>
+    <audio id="backgroundMusic" loop autoplay>
         <source src="Arctic Monkeys- 505.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
-    <script src="script.js"></script>
 </body>
 </html>
