--- a/index1.html
+++ b/index1.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesajınız var..</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style1.css">
+    <title>Mesajınız var..</title>
 </head>
 <body>
     <h1 class="yanan-baslik">Bir Yeni Mesaj<br> 
-    <span style="font-size:30px; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+        <span style="font-size:30px; font-family:'Trebuchet MS', Arial, sans-serif;">
         (Kalbe tıklar mısın?..)
-    </span> 
+        </span>
     </h1>
     
     <div class="contenedor">
@@ -37,9 +37,10 @@
         </div>
     </div>
 
-    <audio id="backgroundMusic" loop autoplay>
+    <audio id="backgroundMusic" loop>
         <source src="Arctic Monkeys- 505.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
     </audio>
+
+    <script src="script1.js"></script>
 </body>
 </html>
