--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
     </div>
 
     <audio id="backgroundMusic" loop>
-        <source src="Arctic Monkeys- 505.mp3" type="audio/mp3">
+        <source src="müzik_brown1.mp3" type="audio/mp3">
     </audio>
 
     <script src="script1.js"></script>
